--- a/views/pages/urls_show.ejs
+++ b/views/pages/urls_show.ejs
@@ -10,23 +10,16 @@
 </header>
 
 <main style="margin: 1em;">
-  <h3>My URLs</h3>
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">Short URL ID</th>
-        <th scope="col">Long URL</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% for (let id in urls) { %>
-        <tr>
-          <td><%= id %></td>
-          <td><%= urls[id] %></td>
-        </tr>
-      <% } %>
-    </tbody>
-  </table>
+  <div class="card text-center">
+    <div class="card-header"></div>
+    <div class="card-body">
+      <h5 class="card-title">TinyURL for: <%= longURL %></h5>
+      <p class="card-text">
+        Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
+      </p>
+    </div>
+    <div class="card-footer text-muted"></div>
+  </div>
 </main>
 
 <footer>
