--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -11,8 +11,8 @@
 
 <main>
   <div class="jumbotron">
-    <h1>This is great</h1>
-    <p>Welcome to templating using EJS</p>
+    <h1>Aingaran's TinyApp!</h1>
+    <p>Welcome to my URL shortener.</p>
   </div>
 </main>
 
