--- a/views/pages/urls_index.ejs
+++ b/views/pages/urls_index.ejs
@@ -21,7 +21,7 @@
     <tbody>
       <% for (let id in urls) { %>
         <tr>
-          <td><%= id %></td>
+          <td><a href='/url/<%= id %>'><%= id %></a></td>
           <td><%= urls[id] %></td>
         </tr>
       <% } %>
