--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,7 +3,7 @@
 <head>
   <%- include('../partials/_head'); %>
 </head>
-<body class="container">
+<body>
 
 <header>
   <%- include('../partials/_header'); %>
