--- a/views/pages/urls_index.ejs
+++ b/views/pages/urls_index.ejs
@@ -3,7 +3,7 @@
 <head>
   <%- include('../partials/_head'); %>
 </head>
-<body class="container">
+<body>
 
 <header>
   <%- include('../partials/_header'); %>
@@ -16,6 +16,7 @@
       <tr>
         <th scope="col">Short URL ID</th>
         <th scope="col">Long URL</th>
+        <th scope="col">Edit</th>
         <th scope="col">Delete</th>
       </tr>
     </thead>
@@ -24,6 +25,14 @@
         <tr>
           <td><a href='/url/<%= id %>'><%= id %></a></td>
           <td><%= urls[id] %></td>
+
+          <td>
+            <form action="/url/<%= id %>/edit" method="get">
+              <input type="hidden" name="id" value="<%= id %>">
+              <button class="btn text-primary border border-primary">Edit</button>
+            </form></td>
+
+
           <td>
             <form action="/url/<%= id %>/delete" method="post">
               <input type="hidden" name="id" value="<%= id %>">
