updating registration page

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -24,6 +24,9 @@
           <input type="text" name="username" placeholder="username" class="form-control" required>
           <button class="btn btn-danger">Login</button>
         </form>
+        <a href="/register">
+          <button class="btn btn-primary">Register</button>
+        </a>
         <% } else{ %>  
 
         <form action="/logout" method="post">
