--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -1,5 +1,33 @@
-<form action="/register" method="post">
-  <input type="text" name="username" placeholder="username" />
-  <input type="password" name="password" placeholder="password" />
-  <button>Register</button>
-</form>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <%- include('../partials/_head'); %>
+</head>
+<body>
+
+<header>
+  <%- include('../partials/_header'); %>
+</header>
+
+<main style="margin: 1em;">
+  <div class="container">
+    <h3>Register</h3>
+    
+    <form action="/register" method="post">
+      <input type="email" name="email" placeholder="email" />
+      <input type="password" name="password" placeholder="password" />
+      <button>Register</button>
+    </form>
+    
+
+  </div>
+</main>
+
+<footer>
+  <%- include('../partials/_footer'); %>
+</footer>
+
+</body>
+</html>
