--- a/views/pages/page_not_found.ejs
+++ b/views/pages/page_not_found.ejs
@@ -11,9 +11,7 @@
 
 <main>
   <div class="jumbotron">
-    <h1>Aingaran's URL Shortener (TinyApp)</h1>
-
-    <p>Welcome to my URL shortener.</p>
+    <h1>404 - Page not found.</h1>
   </div>
 </main>
 
