--- a/views/pages/urls_new.ejs
+++ b/views/pages/urls_new.ejs
@@ -3,13 +3,13 @@
 <head>
   <%- include('../partials/_head'); %>
 </head>
-<body class="container">
+<body>
 
 <header>
   <%- include('../partials/_header'); %>
 </header>
 
-<main style="margin: 1em;">
+<main class="container" style="margin: 1em;">
 
   <h3>Create TinyURL</h3>
   <form action="/url/new" method="post">
