--- a/views/pages/page_not_found.ejs
+++ b/views/pages/page_not_found.ejs
@@ -3,14 +3,14 @@
 <head>
   <%- include('../partials/_head'); %>
 </head>
-<body>
+<body class="h-100 d-flex flex flex-column bg-warning">
 
 <header>
   <%- include('../partials/_header'); %>
 </header>
 
-<main>
-  <div class="jumbotron">
+<main class="h-100 bg-info d-flex flex justify-content-center align-items-center">
+  <div class="bg-danger w-50 m-auto">
     <h1>404 - Page not found.</h1>
   </div>
 </main>
