--- a/views/pages/urls_show.ejs
+++ b/views/pages/urls_show.ejs
@@ -9,7 +9,7 @@
   <%- include('../partials/_header'); %>
 </header>
 
-<main style="margin: 1em;">
+<main>
   <div class="card text-center">
     <div class="card-header"></div>
     <div class="card-body">
