--- a/views/pages/urls_edit.ejs
+++ b/views/pages/urls_edit.ejs
@@ -9,7 +9,7 @@
   <%- include('../partials/_header'); %>
 </header>
 
-<main style="margin: 1em;">
+<main>
   <div class="card text-center">
     <div class="card-header"></div>
     <div class="card-body">
@@ -18,7 +18,7 @@
         Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
       </p>
     </div>
-    <div class="card-footer text-muted"></div>
+
   </div>
 
   <div class="card text-center">
