--- a/views/pages/user_register.ejs
+++ b/views/pages/user_register.ejs
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,14 +11,36 @@
 
 <main style="margin: 1em;">
   <div class="container">
-    <h3>Register</h3>
-    
-    <form action="/register" method="post">
-      <input type="email" name="email" placeholder="email" />
-      <input type="password" name="password" placeholder="password" />
-      <button>Register</button>
-    </form>
-    
+    <div class="p-4 bg-warning w-50 mx-auto text-dark text-center">
+      <h3>Register</h3>
+
+      <% if(message) { %>
+        <div class="mx-auto w-100 p-2 bg-danger text-white"><%- message %></div>
+      <%} %>
+
+      <form action="/register" method="post">
+        <div class="form-group">
+          <input
+            type="email"
+            name="email"
+            placeholder="email"
+            class="form-control my-2"
+          />
+        </div>
+
+        <div class="form-group">
+          <input
+            type="password"
+            name="password"
+            placeholder="password"
+            class="form-control my-2"
+          />
+        </div>
+
+        <button class="form-control btn btn-danger my-2">Register</button>
+      </form>
+      Don't have an account? <a href="/login">Login Here.</a>
+    </div>
 
   </div>
 </main>
