--- a/views/partials/_head.ejs
+++ b/views/partials/_head.ejs
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
-<meta charset="UTF-8">
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <title>TinyApp</title>
 
 <!-- CSS (load bootstrap from a CDN) -->
