--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,38 +1,23 @@
-<header>
-  <nav class="navbar navbar-expand-md navbar-dark bg-success  px-2">
-    <a class="navbar-brand" href="/">TinyApp</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-toggle="collapse"
-      data-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
+<header class="bg-dark text-light d-flex justify-content-between align-items-center py-4 px-2">
+    <span class="logo ">
+      <a class="navbar-brand" href="/">Aingaran's TinyApp</a>
+    </span>
+
+    <ul class="nav">
+
+      <a class="nav-item nav-link" href="/url/new">Create New URL</a>
+      <a class="nav-item nav-link" href="/urls">Show URLs</a>
+
+      <% if(!userId){ %>
+
+        <a href="/login" class="btn btn-danger mx-2">Login</a>
+      <a href="/register" class="btn btn-info">Register
+      </a>
+      <% } else{ %>  
         <a class="nav-item nav-link" href="/urls">My URLs</a>
-        <a class="nav-item nav-link" href="/url/new">Create New URL</a>
-      </div>
-      <div>
+      Logged in as <%- email %>. <a href="/logout" class="btn btn-warning">Logout</a>
 
-        <% if(!userId){ %>
-          <a href="/login" class="btn btn-info">Login</a>
-        <a href="/register" class="btn btn-warning">Register
-        </a>
-        <% } else{ %>  
+      <% } %>
 
-        Currently logged in as (email)
-          <a href="/logout" class="btn btn-warning">Logout</a>
-        </form>
-        <% } %>
-
-
-      </div>
-      <div
-    </div>
-  </nav>
+    </ul>
 </header>
