--- a/views/pages/urls_index.ejs
+++ b/views/pages/urls_index.ejs
@@ -9,7 +9,7 @@
   <%- include('../partials/_header'); %>
 </header>
 
-<main style="margin: 1em;">
+<main class="container py-5">
   <h3>My URLs</h3>
   <table class="table">
     <thead>
