--- a/views/pages/urls_new.ejs
+++ b/views/pages/urls_new.ejs
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <%- include('../partials/_head'); %>
-</head>
-<body>
+  <head>
+    <%- include('../partials/_head'); %>
+  </head>
+  <body>
+    <header><%- include('../partials/_header'); %></header>
 
-<header>
-  <%- include('../partials/_header'); %>
-</header>
+    <main class="container py-5">
+      <h3>Create TinyURL</h3>
+      <form action="/url/new" method="post">
+        Enter a URL:
+        <input
+          type="text"
+          name="longUrl"
+          id="longUrl"
+          placheolder="http://"
+          class="form-control my-2"
+          required
+        />
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </main>
 
-<main class="container" style="margin: 1em;">
-
-  <h3>Create TinyURL</h3>
-  <form action="/url/new" method="post">
-
-  Enter a URL: <input type="text" name="longUrl" id="longUrl" placheolder="http://" class="form-control" required>
-  <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
-</main>
-
-<footer>
-  <%- include('../partials/_footer'); %>
-</footer>
-
-</body>
+    <footer><%- include('../partials/_footer'); %></footer>
+  </body>
 </html>
