--- a/views/pages/urls_show.ejs
+++ b/views/pages/urls_show.ejs
@@ -3,13 +3,13 @@
 <head>
   <%- include('../partials/_head'); %>
 </head>
-<body class="container">
+<body>
 
 <header>
   <%- include('../partials/_header'); %>
 </header>
 
-<main>
+<main class="container py-5">
   <div class="card text-center">
     <div class="card-header"></div>
     <div class="card-body">
