--- a/views/pages/user_login.ejs
+++ b/views/pages/user_login.ejs
@@ -6,9 +6,9 @@
   <body>
     <header><%- include('../partials/_header'); %></header>
 
-<main>
-      <div class="container">
-        <div class="login-box p-4 bg-info w-50 mx-auto text-dark text-center">
+    <main class="container py-5">
+      <div>
+        <div class="p-4 bg-dark w-25 mx-auto text-light text-center">
           <h3>Login</h3>
 
           
@@ -35,7 +35,7 @@
               />
             </div>
 
-            <button class="form-control btn btn-danger my-2">Login</button>
+            <button class="form-control btn btn-primary my-2">Login</button>
           </form>
           Don't have an account? <a href="/register">Register Here.</a>
         </div>
