--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,22 +1,34 @@
-<header class="bg-dark text-light d-flex justify-content-between align-items-center py-4 px-2">
-    <span class="logo ">
-      <a class="navbar-brand" href="/">Aingaran's TinyApp</a>
-    </span>
+<header
+  class="bg-dark text-light d-flex justify-content-between align-items-center py-4 px-2"
+>
+  <span class="logo bg-success text-light px-4 py-2">
+    <a class="navbar-brand" href="/">Aingaran's TinyApp</a>
+  </span>
 
-    <ul class="nav">
+  <ul class="nav">
+    <li class="nav-item nav-link">
+      <a href="/url/new" class="btn btn-warning mx-2">Create New URL</a>
+    </li>
+    <li class="nav-item nav-link">
+      <a href="/urls" class="btn btn-warning mx-2">Show URLs</a>
+    </li>
 
-      <a class="nav-item nav-link" href="/url/new">Create New URL</a>
-      <a class="nav-item nav-link" href="/urls">Show URLs</a>
+    <% if(!userId){ %>
+    <li class="nav-item nav-link">
+      <a href="/login" class="btn btn-danger mx-2">Login</a>
+    </li>
 
-      <% if(!userId){ %>
+    <li class="nav-item nav-link">
+      <a href="/register" class="btn btn-info">Register</a>
+    </li>
+    <% } else{ %>
+    <li class="nav-item nav-link">
+      <a href="/logout" class="btn btn-danger">Logout</a>
+    </li>
+    <li class="nav-item nav-link">
+      <span class="text-dark btn btn-info"> Logged in as <%- email %> </span>
+    </li>
 
-        <a href="/login" class="btn btn-danger mx-2">Login</a>
-      <a href="/register" class="btn btn-info">Register
-      </a>
-      <% } else{ %>  
-      Logged in as <%- email %>. <a href="/logout" class="btn btn-warning">Logout</a>
-
-      <% } %>
-
-    </ul>
+    <% } %>
+  </ul>
 </header>
